# HTTP-X

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  GETTING_STARTED.md  LICENSE  Makefile  README.md
benches/: line_rate.rs  mechanical_sympathy.rs  payload_prop.rs  protocol_bench.rs
bpf/xdp-filter/: Cargo.toml
bpf/xdp-filter/src/: main.rs
crates/httpx-cluster/: Cargo.toml
crates/httpx-cluster/src/: gossip.rs  lib.rs  merge.rs  monitor.rs  orchestrator.rs  reconcile.rs
crates/httpx-codec/: Cargo.toml
crates/httpx-codec/src/: lib.rs  templates.rs
crates/httpx-core/: Cargo.toml
crates/httpx-core/src/: bridge.rs  config.rs  engine.rs  error.rs  lib.rs  registry.rs  session.rs
crates/httpx-crypto/: Cargo.toml
crates/httpx-crypto/src/: in_place.rs  lib.rs
crates/httpx-dsa/: Cargo.toml
crates/httpx-dsa/src/: lib.rs  numa.rs  slab.rs  trie.rs
crates/httpx-transport/: Cargo.toml
crates/httpx-transport-uring/: Cargo.toml
crates/httpx-transport-uring/src/: engine.rs  lib.rs  server.rs
crates/httpx-transport/src/: dispatcher.rs  lib.rs  reliability.rs  server.rs  stream.rs
docs/: ARCHITECTURE.md  CONTRIBUTING.md  GETTING_STARTED.md
examples/: fast_api.rs  raw_test.rs  server_demo.rs
tests/: adversarial_slab.rs  chaos.rs  cluster_unit_tests.rs  codec_tests.rs  convergence_tests.rs  crypto_tests.rs  fast_path_adversarial.rs  fast_path_integration.rs  foundation_check.rs  freshness.rs  fuzz.rs  hardware.rs  io_uring_atomic.rs  leak_certification.rs  numa_validation.rs  performance_boundary.rs  registry_tests.rs  resiliency.rs  slab_safety.rs  swarm_learning.rs  transport_unit_tests.rs  zero_copy_integrity.rs
