[package]
name = "httpx-cluster"
version = "0.1.0"
edition = "2021"

[dependencies]
httpx-core = { path = "../httpx-core" }
httpx-dsa = { path = "../httpx-dsa" }
serde = { workspace = true }
serde_json = "1.0"
tokio = { workspace = true }
tracing = { workspace = true }
crossbeam-epoch = "0.9"
core_affinity = { workspace = true }
